Commit for arrakh to debug my shit

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,6 +16,9 @@ GlobalDefaultGameMode=/Game/Blueprint/BP_GM.BP_GM_C
 EditorStartupMap=/Game/M_Main.M_Main
 GameDefaultMap=/Game/M_Main.M_Main
 
+[/Script/Engine.Engine]
+bSmoothFrameRate=False
+
 [/Script/Engine.PhysicsSettings]
 DefaultGravityZ=-980.000000
 DefaultTerminalVelocity=4000.000000
