--- a/MixAndJam.uproject
+++ b/MixAndJam.uproject
@@ -8,6 +8,10 @@
 			"Name": "DonAINavigation",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/81b4bd085c8c41508edfeb160b6ddf62"
+		},
+		{
+			"Name": "SteamVR",
+			"Enabled": false
 		}
 	]
 }
