!!! SHIPPING COMMIT !!! This is the stage the game was shipped at (https://itch.io/jam/mix-and-game-jam)

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D794690E4D151B8FF90C4DB1D2065200
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+StagingDirectory=(Path="../../../../../../Users/ceeazy/Desktop/RETROVER")
+FullRebuild=True
+
